@@ -35,7 +35,7 @@ Predefined constants
 	* LDNS_RDF_TYPE_TIME,
 	* LDNS_RDF_TYPE_PERIOD,
 	* LDNS_RDF_TYPE_TSIGTIME,
-	* LDNS_RDF_TYPE_TSIG,
+	* LDNS_RDF_TYPE_HIP,
 	* LDNS_RDF_TYPE_INT16_DATA,
 	* LDNS_RDF_TYPE_SERVICE,
 	* LDNS_RDF_TYPE_LOC,
