@@ -181,14 +181,6 @@ ldns_status ldns_str2rdf_alg(ldns_rdf **rd, const char *str);
 ldns_status ldns_str2rdf_unknown(ldns_rdf **rd, const char *str);
 
 /**
- * convert string with a tsig? RR into wireformat
- * \param[in] rd the rdf where to put the data
- * \param[in] str the string to be converted
- * \return ldns_status
- */
-ldns_status ldns_str2rdf_tsig(ldns_rdf **rd, const char *str);
-
-/**
  * convert string with a protocol service into wireformat
  * \param[in] rd the rdf where to put the data
  * \param[in] str the string to be converted
