@@ -16,24 +16,26 @@ LDNS_RDF_TYPE_A			= 5
 LDNS_RDF_TYPE_AAAA		= 6
 LDNS_RDF_TYPE_STR		= 7
 LDNS_RDF_TYPE_APL		= 8
-LDNS_RDF_TYPE_B64		= 9
-LDNS_RDF_TYPE_HEX		= 10
-LDNS_RDF_TYPE_NSEC		= 11
-LDNS_RDF_TYPE_TYPE		= 12
-LDNS_RDF_TYPE_CLASS		= 13
-LDNS_RDF_TYPE_CERT		= 14
-LDNS_RDF_TYPE_ALG		= 15
-LDNS_RDF_TYPE_UNKNOWN		= 16
-LDNS_RDF_TYPE_TIME		= 17
-LDNS_RDF_TYPE_PERIOD		= 18
-LDNS_RDF_TYPE_TSIGTIME		= 19
-LDNS_RDF_TYPE_TSIG		= 20
-LDNS_RDF_TYPE_INT16_DATA	= 21
-LDNS_RDF_TYPE_SERVICE		= 22
-LDNS_RDF_TYPE_LOC		= 23
-LDNS_RDF_TYPE_WKS		= 24
-LDNS_RDF_TYPE_NSA		= 25
-LDNS_RDF_TYPE_IPSECKEY		= 26
+LDNS_RDF_TYPE_B32_EXT		= 9
+LDNS_RDF_TYPE_B64		= 10
+LDNS_RDF_TYPE_HEX		= 11
+LDNS_RDF_TYPE_NSEC		= 12
+LDNS_RDF_TYPE_TYPE		= 13
+LDNS_RDF_TYPE_CLASS		= 14
+LDNS_RDF_TYPE_CERT		= 15
+LDNS_RDF_TYPE_ALG		= 16
+LDNS_RDF_TYPE_UNKNOWN		= 17
+LDNS_RDF_TYPE_TIME		= 18
+LDNS_RDF_TYPE_PERIOD		= 19
+LDNS_RDF_TYPE_TSIGTIME		= 20
+LDNS_RDF_TYPE_HIP		= 21
+LDNS_RDF_TYPE_INT16_DATA	= 22
+LDNS_RDF_TYPE_SERVICE		= 23
+LDNS_RDF_TYPE_LOC		= 24
+LDNS_RDF_TYPE_WKS		= 25
+LDNS_RDF_TYPE_NSAP		= 26
+LDNS_RDF_TYPE_ATMA		= 27
+LDNS_RDF_TYPE_IPSECKEY		= 28
 
 function lua_debug(...)
 	print("[lua]", unpack(arg))
