@@ -333,7 +333,6 @@ ldns_wire2rdf(ldns_rr *rr, const uint8_t *wire, size_t max, size_t *pos)
 		case LDNS_RDF_TYPE_NSAP:
 		case LDNS_RDF_TYPE_ATMA:
 		case LDNS_RDF_TYPE_IPSECKEY:
-		case LDNS_RDF_TYPE_TSIG:
 		case LDNS_RDF_TYPE_LONG_STR:
 		case LDNS_RDF_TYPE_NONE:
 			/*
